Rewrite README to reflect completed pipeline